--- a/app/src/main/res/values-es/strings_file_handling.xml
+++ b/app/src/main/res/values-es/strings_file_handling.xml
@@ -9,17 +9,19 @@
     <string name="Error__file_not_found">No se encontró el archivo! Compruebe por favor.</string>
     <string name="Error__unknown">Falló. Eso es todo lo que sabemos :(.</string>
     <string name="Error__no_activity_view">Ninguna aplicación carga este tipo de archivo.</string>
-    <string name="Error__decrypt_file">No se pudo encriptar</string>
+    <string name="Error__decrypt_file">No se pudo descifrar</string>
     <string name="Dialog__send_file">Enviar archivos encriptados a...</string>
     <string name="Error__already_decrypting">Ya está desencriptando el archivo</string>
     <string name="Error__no_file_selected">Ningún archivo seleccionado.</string>
-    <string name="Files__add_successful">Archivo agregado correctamente</string>
+    <string name="Files__add_successful">Archivo añadido correctamente</string>
     <string name="Files__add_successful_message">¿Quieres eliminar el archivo original?</string>
-    <string name="Error__already_decrypting_delete">No se puede eliminar archivos desencriptados</string>
-    <string name="Files__delete">Eliminar Archivos</string>
-    <string name="Files__delete_message">¿Estás seguro de eliminar los siguientes archivos? %s</string>
-    <string name="Files__number_selected">%d archivos seleccionados</string>
-    <string name="Files__save_to_SD">Todos los archivos encriptados exitosamente y almacenados en la SDCard.</string>
+    <string name="Files__adding">Añadiendo ficheros</string>
+    <string name="Files__adding_finish">Terminó de añadir archivos a Secrecy.</string>
+    <string name="Error__already_decrypting_delete">No se puede eliminar archivos descifrados</string>
+    <string name="Files__delete">Eliminar archivos</string>
+    <string name="Files__delete_message">¿Seguro que quieres eliminar estos archivos? %s</string>
+    <string name="Files__number_selected">%d archivo/s seleccionados</string>
+    <string name="Files__save_to_SD">Todos los archivos descifrados con éxito y almacenados en la tarjeta SD.</string>
     <string name="Vault__new">Nueva Bóveda</string>
     <string name="Error__wrong_password_confirmation">No se pudo crear nueva bóveda</string>
     <string name="Error__wrong_password_confirmation_message">La combinación de la contraseña es incorrecta. Compruebe por favor.</string>
@@ -29,7 +31,7 @@
     <string name="Error__delete_password_incorrect_message">La eliminación se ha abortado.</string>
     <string name="Error__rename_password_incorrect">Contraseña incorrecta.</string>
     <string name="Error__rename_password_incorrect_message">Renombrar se ha abortado.</string>
-    <string name="Error__decrypting_file">Error al desencriptar el archivo.</string>
+    <string name="Error__decrypting_file">Error al descifrar el archivo.</string>
     <string name="Error__decrypting_file_message">Por favor, inténtelo de nuevo más tarde.</string>
     <string name="Error__out_of_memory">Sin memoria!</string>
     <string name="Error__out_of_memory_message">Parece que su dispositivo no tiene el poder suficiente para albergar tanta información. Por favor, inténtelo de nuevo.</string>
@@ -39,6 +41,14 @@
     <string name="action__decrypt">Desencriptando</string>
     <string name="action__delete">Borrar</string>
     <string name="action__add_file">Añadir Archivo</string>
+    <string name="action__change_passphrase">Cambiar la contraseña de bóveda</string>
+    <string name="action__backup">Crear una copia de seguridad</string>
     <string name="File__open">Abriendo archivo encriptado</string>
     <string name="File__open_message">Por favor introduce la contraseña para abrir este archivo</string>
+    <string name="Backup__title">Creando la copia de seguridad</string>
+    <string name="Backup__in_progress">Copia de seguridad en curso</string>
+    <string name="Backup__finish">La copia de seguridad ha sido creada. Su archivo es %s.</string>
+    <string name="Restore__title">Restaurando</string>
+    <string name="Restore__in_progress">Restauración en proceso</string>
+    <string name="Restore__finish">Restauración completa. %s ha sido restaurado.</string>
 </resources>
