--- a/app/src/main/res/values-es/strings_file_handling.xml
+++ b/app/src/main/res/values-es/strings_file_handling.xml
@@ -41,7 +41,7 @@
     <string name="action__decrypt">Desencriptando</string>
     <string name="action__delete">Borrar</string>
     <string name="action__add_file">Añadir Archivo</string>
-    <string name="action__change_passphrase">Cambiar la contraseña de bóveda</string>
+    <string name="action__change_password">Cambiar la contraseña de bóveda</string>
     <string name="action__backup">Crear una copia de seguridad</string>
     <string name="File__open">Abriendo archivo encriptado</string>
     <string name="File__open_message">Por favor introduce la contraseña para abrir este archivo</string>
