--- a/app/src/main/res/values-zh-rCN/strings_file_handling.xml
+++ b/app/src/main/res/values-zh-rCN/strings_file_handling.xml
@@ -41,7 +41,7 @@
     <string name="action__decrypt">解密</string>
     <string name="action__delete">删除</string>
     <string name="action__add_file">添加文件</string>
-    <string name="action__change_passphrase">更改私密匣密码</string>
+    <string name="action__change_password">更改私密匣密码</string>
     <string name="action__backup">备份私密匣</string>
     <string name="File__open">打开加密文件</string>
     <string name="File__open_message">请输入密码以打开此文件</string>
