--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -35,7 +35,10 @@
             android:key="vault_move"
             android:summary="@string/Settings__move_all_vaults_message"
             android:title="@string/Settings__move_all_vaults" />
-
+        <CheckBoxPreference
+            android:key="vault_sort"
+            android:summary="@string/Settings_sort_vault_content_message"
+            android:title="@string/Settings_sort_vault_content" />
     </PreferenceCategory>
     <PreferenceCategory
         android:key="misc"
