--- a/app/src/main/res/animator/fadeout.xml
+++ b/app/src/main/res/animator/fadeout.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<alpha xmlns:android="http://schemas.android.com/apk/res/android"
+<objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
     android:duration="@android:integer/config_mediumAnimTime"
-    android:fromAlpha="1.0"
+    android:valueFrom="1.0"
     android:interpolator="@android:anim/accelerate_interpolator"
-    android:toAlpha="0.0"
+    android:valueTo="0.0"
+    android:propertyName="alpha"
     android:zAdjustment="bottom" />
