--- a/app/src/main/res/values/preference_values.xml
+++ b/app/src/main/res/values/preference_values.xml
@@ -8,5 +8,6 @@
     <string-array name="array_vault_sort_values">
         <item>ALPHABETIC</item>
         <item>FILETYPE</item>
+        <item>LASTMODIFIED</item>
     </string-array>
 </resources>
