Add add new folder option

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,6 +26,12 @@
 
     <dimen name="text_title_size">20sp</dimen>
     <dimen name="drawer_right_margin">56dp</dimen>
+
+    <!-- Material Design Dialogs-->
     <dimen name="dialog_padding">24dp</dimen>
+
+    <!--Material Design Text Fields-->
+    <dimen name="material_text_field_height">48dp</dimen>
+
 
 </resources>
