--- a/app/src/main/res/menu/file_chooser.xml
+++ b/app/src/main/res/menu/file_chooser.xml
@@ -10,5 +10,11 @@
         android:icon="@drawable/ic_action_done"
         android:orderInCategory="1"
         android:title="@string/abc_action_mode_done"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_add_folder"
+        android:icon="@drawable/ic_action_folder_add"
+        android:orderInCategory="2"
+        android:title="@string/Chooser__add_folder"
+        app:showAsAction="ifRoom" />
 </menu>
