--- a/app/src/main/res/values/color.xml
+++ b/app/src/main/res/values/color.xml
@@ -22,5 +22,6 @@
     <color name="accent_dark">@color/quantum_deeporange_A400</color>
     <color name="button">@color/button_material_light</color>
 
+    <color name="text_primary">@color/primary_text_default_material_light</color>
     <color name="text_secondary">#727272</color>
 </resources>
