Added listener for keyboard on unlocking vault.
Created a "PasswordListener" class for listening for both the "ok
button" and the "done" key (IME_ACTION_DONE). The original code used for
retrieving the input is unchanged, just moved into the new listener.
Further work is necessary, as this doesn't work with the
OnLongClickListener for renaming the vault yet.

Also, added some gitignore entries (vim swap files, error logs).

--- a/app/src/main/res/layout/vault_item.xml
+++ b/app/src/main/res/layout/vault_item.xml
@@ -97,7 +97,9 @@
                 android:layout_toLeftOf="@+id/open_ok"
                 android:layout_toStartOf="@+id/open_ok"
                 android:hint="@string/Vault__password"
-                android:inputType="textPassword" />
+                android:inputType="textPassword"
+                android:singleLine="true"
+                android:imeOptions="actionDone"/>
 
             <ImageButton
                 android:id="@+id/open_ok"
